Fix contrast error by changing color property of lable text to green

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,7 +447,7 @@ main > div {
     bottom: 0;
     text-indent: -9999px;
     white-space: nowrap;
-    color: var(--font-color);
+    color: green;
     background-color: var(--primary-background);
     -webkit-transition: var(--transition-normal);
     transition: var(--transition-normal);
